--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
             <version>${commons-dbcp.version}</version>
         </dependency>
 
+         <!-- for the reported jenkins job error for accessing sonarqube -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.4</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
